# EstructurasDeDatosLineales

./: .gitignore  README.md  meson.build
include/: error.h  libdstruct.h  meson.build  node.h  report.h
src/: meson.build
src/doubly_linked/: dlist.c  dqueue.c  meson.build
src/error/: error.c  meson.build
src/head_based/: hqueue.c  list.c  meson.build  pqueue.c  queue.c
src/node/: meson.build  node.c  pnode.c  snode.c
src/report/: meson.build  report.c
src/singly_linked/: Spila.c  meson.build  pila.c  slist.c  spila.c  squeue.c  sstack.c
src/statics/: colaCircular.c  listaCircular.c  meson.build  queue.c  stack.c
tests/: dlist.c  dqueue.c  list.c  menu.c  meson.build  nodes.c  pqueue.c  slist.c  squeue.c  stack.c  static_queue.c  static_stack.c  test.c
tests/menu/: menu.c  menu_functions.c  menu_layout.c  utilidades.c  utilidades.h
